# end-to-end-openapi-postgres-hummingbird/example-openapi-generator/Sources/ExampleOpenAPIGenrator/OpenAPI/_General/OpenAPI+Response.swift
@@ -12,3 +12,18 @@ struct EmptyResponse: ResponseRepresentable {
     let description: String
     var contentMap: ContentMap { [:] }
 }
+
+struct BadInputResponse: ResponseRepresentable {
+    let description: String = "Bad input"
+    var contentMap: ContentMap { [:] }
+}
+
+struct UnprocessableEntityResponse: ResponseRepresentable {
+    let description: String = "Unprocessable entity"
+    var contentMap: ContentMap { [:] }
+}
+
+struct NotFoundResponse: ResponseRepresentable {
+    let description: String = "Todo not found"
+    var contentMap: ContentMap { [:] }
+}
